<resources>
    <string name="app_name">TODO Mobile</string>
    <string name="support_email">rgb.mobile.studios@gmail.com</string>
    <string name="splash_text">ToDo Mobile</string>
    <string name="skip">SKIP</string>
    <string name="mark_as_completed">Mark Completed</string>
    <string name="mark_as_uncompleted">Mark Uncompleted</string>
    <string name="star_task">Star task</string>
    <string name="delete_task">Are you sure you want to delete this task?</string>
    <string name="developer_signature">© 2023 Oladayo.rgb</string>
    <string name="save">Save</string>
    <string name="set_time_and_date">set time and date</string>
    <string name="add_task_description">add task description</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="add_task">Add Task</string>
    <string name="delete">Delete</string>
    <string name="sure_response">Yes, I\'m sure</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="password_hint">&#8226; &#8226; &#8226; &#8226; &#8226; &#8226; &#8226; &#8226;</string>
    <string name="discard_changes">Discard Changes</string>
    <string name="tasks_completed">All tasks completed</string>
    <string name="well_done">Well done!</string>
    <string name="no_tasks_yet">No tasks yet</string>
    <string name="no_tasks_here">No tasks here</string>
    <string name="add_tasks">Tap + to add your tasks</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="type_description">Type description</string>
    <string name="onboarding_two_body">Create your personalized routine to stay productive</string>
    <string name="onboarding_two_title">Create daily routine</string>
    <string name="image_that_illustrates_creating_daily_routine">Image that illustrates creating daily routine</string>
    <string name="onboarding_three_body">Organize your daily tasks by adding your tasks into separate categories</string>
    <string name="onboarding_three_title">Organize your tasks</string>
    <string name="onboarding_one_body">You can easily manage all of your daily tasks for free</string>
    <string name="onboarding_one_title">Manage your tasks</string>
    <string name="image_that_illustrates_managing_your_tasks">Image that illustrates managing your tasks</string>
    <string name="image_that_illustrates_organizing_your_tasks">Image that illustrates organizing your tasks</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="please_login_to_your_account_or_create_new_account_to_continue">Please login to your account or create new account to continue</string>
    <string name="welcome_to_todo_mobile">Welcome to TODO Mobile</string>
    <string name="add_new_task">add new task</string>
    <string name="edit_category">Edit Category</string>
    <string name="create_new_category">Create new category</string>
    <string name="user_giving_feedback">User giving feedback</string>
    <string name="name">Name</string>
    <string name="occupation">Occupation</string>
    <string name="collapse_list_icon">collapse list icon</string>
    <string name="close_list_icon">close list icon</string>
    <string name="overdue_task">(Overdue)</string>
    <string name="set_date_time">Set Date/Time</string>
    <string name="favorites">Favorites</string>
    <string name="sort_by">Sort by</string>
    <string name="categories">Categories</string>
    <string name="add_multiple_tasks">Add Multiple Tasks</string>
    <string name="calender_view">Calender view \uD83D\uDD12</string>
    <string name="back_button">Pop back</string>
    <string name="task">Task</string>
    <string name="task_time">Task Time</string>
    <string name="task_category">Task Category</string>
    <string name="add">Add</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="mark_completed">Mark Completed</string>
    <string name="settings">Settings</string>
    <string name="account_settings">Account Settings</string>
    <string name="latest_due_date_first">Latest Due Date First</string>
    <string name="earliest_due_date_first">Earliest Due Date First</string>
    <string name="a_z">A-Z</string>
    <string name="z_a">Z-A</string>
    <string name="type_title">Type title</string>
    <string name="delete_selected_tasks">Delete Selected Tasks?</string>
    <string name="delete_selected_tasks_body">Are you sure you want to delete these selected tasks?</string>
    <plurals name="multiple_tasks_to_category">
        <item quantity="one">Add %d task to a category</item>
        <item quantity="other">Add %d tasks to a category</item>
    </plurals>
    <string name="or_continue_with">or continue with</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="don_t_have_an_account">Don’t have an account? </string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already have an account? </string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="google_login">Google Login</string>
    <string name="facebook_login">Facebook Login</string>
    <string name="github_login">GitHub Login</string>
    <string name="log_in_with_fingerprint">Log in with fingerprint</string>
    <string name="deactivate_account">Deactivate Account</string>
    <string name="general_settings">General Settings</string>
    <string name="change_your_password">Change your password</string>
    <string name="remove">Remove</string>
    <string name="connect">Connect</string>
    <string name="complete_account_set_up">Complete Account Set Up</string>
    <string name="enter_email">Enter email</string>
    <string name="connected_accounts">Connected Accounts</string>
    <string name="change_app_theme">Change App Theme</string>
    <string name="change_your_email">Change your email</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="update_password">Update password</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="index">Index</string>
    <string name="time_format">Time format</string>
    <string name="_12_hour">12-hour</string>
    <string name="default_view_on_start">Default view on start</string>
    <string name="task_view">Task view</string>
    <string name="keep_completed_tasks_for">Keep completed tasks for</string>
    <string name="_2_weeks">2 weeks</string>
    <string name="notifications">Notifications</string>
    <string name="sound">Sound</string>
    <string name="default_ring">Default (Ring)</string>
    <string name="vibration">Vibration</string>
    <string name="disabled">Disabled</string>
    <string name="batch_task_limit_exceeded_message">You can\'t create more than 10 tasks at once.</string>
    <string name="paystack_url">https://paystack.com/pay/TODOMobileDonate</string>
    <string name="task_title">New Task</string>
    <string name="task_title_plain">Task Title</string>
    <string name="task_description">Task Description</string>
    <string name="remove_task">Remove Task</string>
    <string name="due_date">Due Date</string>
    <string name="give_feedback">Give Feedback</string>
    <string name="thanks_for_the_feedback">Thanks for the feedback!</string>
    <string name="additional_comments">Additional comments</string>
    <string name="type_comments_here">Type comments here</string>
    <string name="submit_feedback">Submit feedback</string>
    <string name="rate_your_experience">Rate your experience</string>
    <string name="support_us">Support Us</string>
    <string name="support_text_body">You can support the TODO Mobile project by donating a small amount. Thank you for helping us in keeping TODO Mobile ad-free and making the service better.</string>
    <string name="no_internet_connection_message">Oops! No internet connection. Please check your network settings and try again.</string>
    <string name="_1_000_00">1,000.00</string>
    <string name="naira">₦</string>
    <string name="donate_now">Donate Now</string>
    <string name="select_your_bank">Select Your Bank</string>
    <string name="type_in_amount">Type in Amount</string>
    <string name="current_email">Current email </string>
    <string name="example_email_com">example@email.com</string>
    <string name="new_email">New email</string>
    <string name="update_email">Update email</string>
    <string name="google_account">Google account</string>
    <string name="facebook_account">Facebook account</string>
    <string name="twitter_account">Twitter account</string>
    <string name="category_name">Category name</string>
    <string name="category_icon">Category icon:</string>
    <string name="choose_icon_from_library">Choose icon from library</string>
    <string name="category_color">Category color</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="you_are_also_logged_out_from_your_personal_cloud">You are also logged out from your personal cloud.</string>
    <string name="log_out">Log Out</string>
    <string name="password_reset">Password Reset</string>
    <string name="you_will_receive_instructions_for_resetting_your_password">You will receive instructions for resetting your password</string>
    <string name="submit">Submit</string>
    <string name="discard_current_draft">Discard current draft?</string>
    <string name="are_you_sure_you_want_to_discard_without_saving">Are you sure you want to discard without saving</string>
    <string name="discard">Discard</string>
    <string name="choose_category">Choose Category</string>
    <string name="delete_category">Delete Category</string>
    <string name="rename_task">Rename Task</string>
    <string name="date">Date</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="ok">OK</string>
    <string name="more_options">more options</string>
    <string name="select_all">select all</string>
    <string name="exit_selection_mode">exit selection mode</string>
    <string name="no_current_tasks">no current tasks</string>
    <string name="share_tasks">share tasks</string>
    <string name="add_tasks_to_a_category">Add tasks to a category</string>
    <string name="edit_due_date_and_time">edit due date and time</string>
    <string name="rename_selected_tasks">rename selected tasks</string>
    <string name="get_started">Get Started</string>
    <string name="rotate_image">rotate image</string>
    <string name="pick_from_default">Pick from default</string>
    <string name="change_avatar">change avatar</string>
    <string name="close_button">close button</string>
    <string name="avatar_expanded">avatar expanded</string>
    <string name="new_notification_in_profile_page">new notification in profile page</string>
    <string name="twitter_login_button">twitter login button</string>
    <string name="category">Category</string>
    <string name="new_notification">new notification</string>
    <string name="pay_with_card">Pay with Card</string>
    <string name="payment_option">payment option</string>
    <string name="card_number">Card Number</string>
    <string name="card_expiry">Card Expiry</string>
    <string name="cvv">CVV</string>
    <string name="set_reminders">Set Reminders</string>
    <string name="_1_hour">1 Hour</string>
    <string name="uploadusertasks">uploadUserTasks</string>
    <string name="setupreminders">setUpReminders</string>
    <string name="coming_soon_reminders_current_set_to_default">Coming soon, reminders current set to default</string>
</resources>