<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16sp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:text="@string/add_task"
        android:textSize="18sp" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/taskTitleEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:background="@android:color/transparent"
        app:boxBackgroundMode="none"/>


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/taskDescriptionEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:maxLines="10"
        android:scrollbars="vertical"
        android:gravity="top|start"
        app:boxBackgroundMode="none"
        android:background="@android:color/transparent"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingVertical="16sp">

        <!-- Three task detail icons grouped together on the left side -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageButton
                android:id="@+id/addDescriptionBtn"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@android:color/transparent"
                android:src="@drawable/details"
                android:contentDescription="@string/add_task_description"
                app:tint="?attr/colorOnSurface"/>

            <ImageButton
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@android:color/transparent"
                android:src="@drawable/clock"
                android:layout_marginStart="24dp"
                android:contentDescription="@string/set_time_and_date"
                app:tint="?attr/colorOnSurface"/>

            <ImageButton
                android:id="@+id/star"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@android:color/transparent"
                android:src="@drawable/star"
                android:layout_marginStart="24dp"
                android:contentDescription="@string/star_task"
                app:tint="?attr/colorOnSurface" />

        </LinearLayout>

        <!-- Empty space to create a gap between the left icons and the right icon -->
        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <!-- Icon on the right side -->
        <TextView
            android:id="@+id/saveTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textColor="@color/material_grey_600"
            android:layout_marginEnd="16dp"
            android:layout_gravity="end" />

    </LinearLayout>



</LinearLayout>
