<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="1dp"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingHorizontal="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/batchTaskTitleTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/task_title" />

        <ImageView
            android:id="@+id/removeTask"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_margin="4dp"
            android:contentDescription="@string/remove_task"
            android:src="@drawable/close" />
    </LinearLayout>

    <EditText
        android:id="@+id/batchTaskTitleEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="start"
        android:hint="@string/task_title_plain"
        android:maxLines="1" />


    <EditText
        android:id="@+id/batchTaskDescriptionEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="start"
        android:hint="@string/task_description"
        android:maxLines="2" />

    <TextView
        android:id="@+id/batchTaskDateTimeTVB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/due_date"
        android:textColor="@color/material_on_surface_disabled" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="8dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/invisibleDueDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

</LinearLayout>
