<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/removeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8sp"
        android:gravity="center_horizontal"
        android:text="@string/are_you_sure"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/removeBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/you_are_also_logged_out_from_your_personal_cloud" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="16sp">

        <TextView
            android:id="@+id/btnConfirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="?attr/colorPrimary"
            android:text="@string/log_out"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textSize="16sp"
            android:textColor="?colorOnSurface" />

    </LinearLayout>
</LinearLayout>
